--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/reset.css" />
     <title>React App</title>
   </head>
   <body>
